welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:6: error: ':' expected but ')' found.
def faireFleur(c) {
                ^FlowerPot:19: error: identifier expected but '}' found.
}
^